--- a/app/src/main/res/layout/activity_create_profile.xml
+++ b/app/src/main/res/layout/activity_create_profile.xml
@@ -99,7 +99,7 @@
 
 
             <Button
-                android:id="@+id/btn_update"
+                android:id="@+id/btn_create"
                 style="?android:attr/borderlessButtonStyle"
                 android:layout_width="0dp"
                 android:layout_height="50dp"
@@ -121,7 +121,7 @@
     </ScrollView>
 
     <Button
-        android:id="@+id/btn_backtoprofile"
+        android:id="@+id/btn_backtologin"
         style="?android:attr/borderlessButtonStyle"
         android:layout_width="90dp"
         android:layout_height="45dp"
