--- a/app/src/main/res/layout/activity_edit_profile.xml
+++ b/app/src/main/res/layout/activity_edit_profile.xml
@@ -86,7 +86,7 @@
                 <EditText
                     android:id="@+id/et_last_name"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
+                    android:layout_height="84dp"
                     android:background="#00000000"
                     android:gravity="center"
                     android:hint="Last Name"
@@ -111,7 +111,7 @@
                 <EditText
                     android:id="@+id/et_email"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
+                    android:layout_height="81dp"
                     android:background="#00000000"
                     android:gravity="center"
                     android:hint="Email"
