--- a/app/src/main/res/layout/activity_maps.xml
+++ b/app/src/main/res/layout/activity_maps.xml
@@ -52,6 +52,26 @@
         </ScrollView>
 
         <Button
+            android:id="@+id/btn_nav"
+            style="?android:attr/borderlessButtonStyle"
+            android:layout_width="90dp"
+            android:layout_height="50dp"
+            android:layout_marginStart="10dp"
+            android:layout_marginEnd="300dp"
+            android:layout_marginBottom="156dp"
+            android:background="@color/design_default_color_primary"
+            android:elevation="2dp"
+            android:text="Navigation"
+            android:textAllCaps="false"
+            android:textColor="#FFFFFF"
+            android:textSize="15sp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.0"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintWidth_percent="0.7" />
+
+        <Button
             android:id="@+id/btn_settings"
             style="?android:attr/borderlessButtonStyle"
             android:layout_width="90dp"
