--- a/app/src/main/res/layout/activity_maps.xml
+++ b/app/src/main/res/layout/activity_maps.xml
@@ -54,14 +54,14 @@
         <Button
             android:id="@+id/btn_nav"
             style="?android:attr/borderlessButtonStyle"
-            android:layout_width="90dp"
+            android:layout_width="130dp"
             android:layout_height="50dp"
             android:layout_marginStart="10dp"
             android:layout_marginEnd="300dp"
             android:layout_marginBottom="156dp"
             android:background="@color/design_default_color_primary"
             android:elevation="2dp"
-            android:text="Navigation"
+            android:text="Get Directions"
             android:textAllCaps="false"
             android:textColor="#FFFFFF"
             android:textSize="15sp"
@@ -74,7 +74,7 @@
         <Button
             android:id="@+id/btn_settings"
             style="?android:attr/borderlessButtonStyle"
-            android:layout_width="90dp"
+            android:layout_width="130dp"
             android:layout_height="50dp"
             android:layout_marginStart="10dp"
             android:layout_marginEnd="300dp"
@@ -94,7 +94,7 @@
         <Button
             android:id="@+id/btn_profile"
             style="?android:attr/borderlessButtonStyle"
-            android:layout_width="90dp"
+            android:layout_width="130dp"
             android:layout_height="50dp"
             android:layout_marginStart="10dp"
             android:layout_marginEnd="300dp"
