--- a/app/src/main/res/layout/activity_report_issue.xml
+++ b/app/src/main/res/layout/activity_report_issue.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#FFFFFF"
-    tools:context=".ReportIssueActivity">
+    tools:context=".dropinui.ReportIssueActivity">
 
     <TextView
         android:id="@+id/tv_heading"
