--- a/app/src/main/res/layout/activity_report_issue.xml
+++ b/app/src/main/res/layout/activity_report_issue.xml
@@ -32,7 +32,6 @@
             android:focusable="true"
             android:focusableInTouchMode="true">
 
-
             <com.google.android.material.textfield.TextInputLayout
                 android:id="@+id/layout_image"
                 android:layout_width="0dp"
@@ -43,8 +42,6 @@
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintWidth_percent="0.7">
-
-
             </com.google.android.material.textfield.TextInputLayout>
 
             <com.google.android.material.textfield.TextInputLayout
@@ -64,7 +61,7 @@
                     android:layout_height="wrap_content"
                     android:background="#00000000"
                     android:gravity="center"
-                    android:hint="Type issue here"
+                    android:hint="Enter issue here"
                     android:padding="30dp"
                     android:textColor="#000000"
                     android:textColorHint="#808080"
@@ -72,7 +69,7 @@
             </com.google.android.material.textfield.TextInputLayout>
 
             <Button
-                android:id="@+id/btn_report"
+                android:id="@+id/btn_upload"
                 style="?android:attr/borderlessButtonStyle"
                 android:layout_width="0dp"
                 android:layout_height="50dp"
@@ -80,7 +77,7 @@
                 android:background="@color/design_default_color_primary"
                 android:elevation="2dp"
                 android:onClick="performReportIssue"
-                android:text="Report"
+                android:text="Upload"
                 android:textAllCaps="false"
                 android:textColor="#FFFFFF"
                 android:textSize="15sp"
