--- a/app/src/main/res/layout/activity_view_profile.xml
+++ b/app/src/main/res/layout/activity_view_profile.xml
@@ -143,16 +143,17 @@
         style="?android:attr/borderlessButtonStyle"
         android:layout_width="136dp"
         android:layout_height="48dp"
-        android:layout_marginEnd="132dp"
-        android:layout_marginBottom="5dp"
+        android:layout_marginStart="137dp"
+        android:layout_marginEnd="138dp"
         android:background="@color/design_default_color_primary"
         android:elevation="2dp"
         android:text="Logout"
         android:textAllCaps="false"
         android:textColor="#FFFFFF"
         android:textSize="15sp"
-        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintWidth_percent="0.7" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintWidth_percent="0.7"
+        tools:layout_editor_absoluteY="758dp" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
